fix: handle UnsupportedEncodingException when copying web link